# dinner

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
assets/: CMakeLists.txt  manifest.yaml
assets/music/: menu-1.mmpz
assets/palettes/: sweetie-16-1x.txt
assets/test-1/: script.txt
assets/test-1/music/: feast.mmpz
assets/test-level/: script
src/: .clang-tidy  CMakeLists.txt
src/base/: CMakeLists.txt  error.hpp  fs.cpp  fs.hpp  logging.hpp  memory_mapped_file.cpp  memory_mapped_file.hpp  overloaded.hpp  story.cpp  story.hpp
src/booka/: CMakeLists.txt  main.cpp
src/booka/lib/: CMakeLists.txt  booka.cpp  booka.fbs  booka.hpp  unpacked_booka.cpp
src/booka/lib/include/: booka.hpp  unpacked_booka.hpp
src/data/: CMakeLists.txt  data.cpp  data.fbs
src/data/include/: data.hpp
src/dinner/: CMakeLists.txt  build-info.hpp.in  client.hpp  config.cpp  config.hpp  game_flow.hpp  main.cpp  sdl.hpp  story.cpp  story.hpp  view.cpp  view.hpp  widget.hpp
src/repa/: CMakeLists.txt  main.cpp
src/repa/lib/: CMakeLists.txt  repa.cpp  repa.fbs
src/repa/lib/include/: repa.hpp
src/storyteller/: CMakeLists.txt  main.cpp
